# skatteprogressivitet

./: .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md  Makefile  NOTICE  README.md  SECURITY.md  codecov.yml  mkdocs.yml  noxfile.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  legislation_update.md
.github/workflows/: ci.yml  dependabot.yml  docs.yml  release.yml  security.yml
.reuse/: dep5
R/: gini_crosscheck.R
benchmarks/: bench_simulator.py
data/: SYNTHETIC.md
data/legislation/: 1991.yaml  1995.yaml  2000.yaml  2007.yaml  2015.yaml  2020.yaml  2025.yaml  schema.json
data/scenarios/: broaden-capital-base.yaml  comprehensive-income.yaml  raise-brytpunkt.yaml  recalibrate-jobbskatteavdrag.yaml
data/synthetic/: CC0_WAIVER.md  lisa_like.parquet  tax_register_like.parquet
docs/: about.md  accessibility.md  citation.md  data-policy.md  deviations.md  dpia-summary.md  eu-compliance.md  fair4rs.md  gdpr.md  glossary.md  governance.md  index.md  installation.md  osor.md  quickstart.md  reproducibility.md  scenarios.md  swedish-legal-basis.md
docs/api/: behavioural.md  causal.md  config.md  index.md  ingestion.md  legislation.md  paths.md  pipelines.md  progressivity.md  reporting.md  rules.md  scenarios.md  seeds.md  simulator.md  skatteprogressivitet.md
docs/legislation/: overview.md
docs/methodology/: eti.md  progressivity.md
replication/: README.md  expected_receipts.json  run_all.sh
scripts/: generate_synthetic_data.py  update_golden_records.py  validate_all_legislation.py
src/skatteprogressivitet/: __init__.py  _version.py  cli.py  config.py  logging.py  paths.py  seeds.py
src/skatteprogressivitet/behavioural/: __init__.py  bunching.py  eti.py  extensive_margin.py  income_shifting.py
src/skatteprogressivitet/causal/: __init__.py  did.py  event_study.py  iv.py
src/skatteprogressivitet/ingestion/: __init__.py  lisa.py  manifest.py  tax_registers.py
src/skatteprogressivitet/legislation/: __init__.py  indexation.py  ledger.py  loader.py  schema.py
src/skatteprogressivitet/pipelines/: __init__.py  dag.py  runner.py
src/skatteprogressivitet/progressivity/: __init__.py  decomposition.py  indices.py  standard_errors.py
src/skatteprogressivitet/reporting/: __init__.py  figures.py  pdf_a.py  tables.py
src/skatteprogressivitet/rules/: __init__.py  capital_income_tax.py  housing_allowance.py  jobbskatteavdrag.py  payroll_tax.py  personal_income_tax.py  three_twelve.py  transfers.py
src/skatteprogressivitet/scenarios/: __init__.py  loader.py  runner.py
src/skatteprogressivitet/simulator/: __init__.py  engine.py  equivalence.py  units.py
stata/: jobbskatteavdrag.do
tests/: __init__.py  conftest.py  test_behavioural_bunching.py  test_behavioural_eti.py  test_behavioural_extensive.py  test_behavioural_income_shifting.py  test_causal_did.py  test_causal_event_study.py  test_causal_iv.py  test_cli.py  test_config.py  test_determinism.py  test_golden_records.py  test_ingestion.py  test_legislation_indexation.py  test_legislation_loader.py  test_legislation_schema.py  test_paths.py  test_pipelines.py  test_progressivity_decomposition.py  test_progressivity_indices.py  test_progressivity_standard_errors.py  test_reporting.py  test_reuse_compliance.py  test_rules_capital_income_tax.py  test_rules_housing_allowance.py  test_rules_jobbskatteavdrag.py  test_rules_payroll_tax.py  test_rules_personal_income_tax.py  test_rules_three_twelve.py  test_rules_transfers.py  test_scenarios.py  test_seeds.py  test_simulator_engine.py  test_simulator_equivalence.py
tests/golden/: README.md  sim_1991.json  sim_2007.json  sim_2020.json  sim_2025.json
