[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "skatteprogressivitet"
version = "0.1.0"
description = "Static and behavioural microsimulator for Swedish tax progressivity."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "EUPL-1.2" }
authors = [
  { name = "Gustav Olaf Yunus Laitinen-Fredriksson Lundström Imanov", email = "olaf.laitinen@su.se" },
]
maintainers = [
  { name = "Gustav Olaf Yunus Laitinen-Fredriksson Lundström Imanov", email = "olaf.laitinen@su.se" },
]
keywords = [
  "tax progressivity",
  "microsimulation",
  "Sweden",
  "ETI",
  "jobbskatteavdrag",
  "3:12",
  "EUPL-1.2",
  "OSOR",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Typing :: Typed",
]
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.2",
  "polars>=1.0",
  "pyarrow>=15",
  "scikit-learn>=1.4",
  "statsmodels>=0.14",
  "linearmodels>=6",
  "econml>=0.15",
  "doubleml>=0.7",
  "matplotlib>=3.8",
  "pydantic>=2.6",
  "pyyaml>=6",
  "jsonschema>=4.21",
  "typer>=0.12",
  "structlog>=24.1",
  "rich>=13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "pytest-xdist>=3.5",
  "pytest-randomly>=3.15",
  "pytest-benchmark>=4",
  "hypothesis>=6.100",
  "ruff>=0.5",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "nox>=2024.4.15",
  "reuse>=4",
  "cyclonedx-bom>=4",
  "pip-audit>=2.7",
  "bandit>=1.7",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
  "mike>=2",
]
bench = ["pytest-benchmark>=4"]

[project.scripts]
skatteprogressivitet = "skatteprogressivitet.cli:main"

[project.urls]
Homepage = "https://github.com/olaflaitinen/skatteprogressivitet"
Documentation = "https://olaflaitinen.github.io/skatteprogressivitet"
Repository = "https://github.com/olaflaitinen/skatteprogressivitet"
Issues = "https://github.com/olaflaitinen/skatteprogressivitet/issues"
Changelog = "https://github.com/olaflaitinen/skatteprogressivitet/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/skatteprogressivitet"]

[tool.hatch.build.targets.sdist]
include = [
  "src/",
  "tests/",
  "data/legislation/",
  "data/scenarios/",
  "docs/",
  "LICENSES/",
  "LICENSE",
  "NOTICE",
  "CITATION.cff",
  "README.md",
  "CHANGELOG.md",
  "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PL", "S", "A", "COM", "PIE", "RET", "TCH", "ARG", "DTZ"]
ignore = [
  "COM812",
  "S101",
  "PLR2004",
  "ARG001",
  "ARG002",
  "PLC0415",
  "PLR0913",
  "ARG005",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "ARG001", "B017"]
"benchmarks/*" = ["S101", "ARG001"]
"scripts/*" = ["S101"]
"src/skatteprogressivitet/cli.py" = ["S603", "S607"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
strict_equality = true
show_error_codes = true
files = ["src/skatteprogressivitet"]

[[tool.mypy.overrides]]
module = ["pandas", "pandas.*", "pyarrow", "pyarrow.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["yaml", "jsonschema", "jsonschema.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "-ra",
  "--strict-markers",
  "--import-mode=importlib",
]
markers = [
  "slow: marks tests as slow",
  "golden: marks golden-record tests",
  "property: marks property-based tests",
]

[tool.coverage.run]
source = ["src/skatteprogressivitet"]
branch = true
omit = ["*/tests/*", "*/_version.py"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "@overload",
]
